# Letterbox

./: .gitignore  README.md  main.py  pyproject.toml
letterbox/: config.ini  main.py
src/: main.py
