[tool.poetry]
name = "letterbox"
version = "0.1.0"
description = ""
authors = ["fakenamesmith"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.13.1"
pillow = "^11.0.0"
pyqt5 = "==5.15.10"

[tool.poetry.scripts]
letterbox = "letterbox.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
